force-app/main/default/objects/Subscription_Tracking__c/Subscription_Tracking__c.object-meta.xml
<CustomObject>
    <description>Sales tracking for customer subscriptions both NCR and 3rd party solutions</description>
    <label>Subscription Tracking</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>