force-app/main/default/objects/Subscription_Tracking__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Annual Contract Value of the Subscription</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>