force-app/main/default/objects/Subscription_Tracking__c/fields/Customer_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Which customer contact is responsible for renewing this subscription?</inlineHelpText>
    <label>Customer Contract Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>