force-app/main/default/objects/Subscription_Tracking__c/fields/Evergreen_Contract__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the subscription auto-renew until cancellation?</inlineHelpText>
    <label>Evergreen Contract?</label>
    <type>Checkbox</type>
</CustomField>