force-app/main/default/objects/Subscription_Tracking__c/fields/Legal_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agreement_End_Date__c</fullName>
    <inlineHelpText>When does the agreement expire?</inlineHelpText>
    <label>Legal Agreement End Date</label>
    <type>Date</type>
</CustomField>