force-app/main/default/objects/Subscription_Tracking__c/fields/Opportunity_test__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test</description>
    <label>Opportunity Record</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscription Tracking</relationshipLabel>
    <relationshipName>Subscription_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>