force-app/main/default/objects/Subscription_Tracking__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <inlineHelpText>If there is a non-OEM service provider that manages the subscription, please notate that here.</inlineHelpText>
    <label>Service Provider</label>
    <length>60</length>
    <type>Text</type>
</CustomField>