force-app/main/default/objects/Subscription_Tracking__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>3rd Party or Competitive Subscriptions</description>
    <label>External</label>
</RecordType>