force-app/main/default/objects/Subscription_Tracking__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>NCR Contracted Subscriptions</description>
    <label>Internal</label>
</RecordType>